--- a/index.html
+++ b/index.html
@@ -17,46 +17,53 @@
     --padx: clamp(14px, 4vw, 60px);
     --max: 1120px;
 
-    /* Vision glass */
-    --glassA: rgba(255,255,255,.22);
-    --glassB: rgba(255,255,255,.10);
-    --stroke: rgba(255,255,255,.58);
+    /* Glass (tuned a bit clearer / “jelly”) */
+    --glassA: rgba(255,255,255,.16);
+    --glassB: rgba(255,255,255,.06);
+
+    --stroke: rgba(255,255,255,.55);
     --stroke2: rgba(255,255,255,.22);
     --strokeDark: rgba(11,19,32,.10);
 
     --shadowA: 0 34px 120px rgba(10,18,35,.10);
     --shadowB: 0 14px 38px rgba(10,18,35,.07);
 
-    /* subtle color energy (very low!) */
-    --c1: rgba(160,210,255,.18);
-    --c2: rgba(210,190,255,.14);
-    --c3: rgba(255,220,180,.10);
+    /* subtle color energy (slightly stronger so blur is visible) */
+    --c1: rgba(140,210,255,.28);
+    --c2: rgba(205,175,255,.22);
+    --c3: rgba(255,210,170,.16);
   }
 
   * , *::before, *::after{ box-sizing:border-box; }
   html, body{ width:100%; max-width:100%; overflow-x:hidden; margin:0; }
   html{ scroll-behavior:smooth; }
+
   body{
     font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     color: var(--ink);
+
+    /* slightly more “active” background so backdrop-filter has something to blur */
     background:
-      radial-gradient(1200px 760px at 20% 0%, rgba(255,255,255,.95), transparent 62%),
-      radial-gradient(1000px 700px at 85% 15%, rgba(255,255,255,.82), transparent 62%),
+      radial-gradient(520px 340px at 18% 18%, rgba(124, 92, 255, .18), transparent 60%),
+      radial-gradient(560px 360px at 82% 22%, rgba(0, 224, 255, .14), transparent 62%),
+      radial-gradient(700px 480px at 70% 86%, rgba(255, 110, 199, .10), transparent 65%),
+      radial-gradient(1200px 760px at 20% 0%, rgba(255,255,255,.92), transparent 62%),
+      radial-gradient(1000px 700px at 85% 15%, rgba(255,255,255,.78), transparent 62%),
       linear-gradient(180deg, var(--bg0), var(--bg1));
   }
 
-  /* ===== VisionOS-like atmosphere layers ===== */
+  /* ===== Atmosphere layers (LESS pre-blur so glass blur becomes visible) ===== */
   .atmo{
     position:fixed; inset:-20%; pointer-events:none; z-index:-2;
     background:
       radial-gradient(700px 420px at 18% 20%, var(--c1), transparent 70%),
       radial-gradient(720px 460px at 78% 22%, var(--c2), transparent 72%),
       radial-gradient(820px 540px at 55% 78%, var(--c3), transparent 72%);
-    filter: blur(26px);
-    opacity:.85;
+    filter: blur(8px); /* was 26px */
+    opacity:.9;
   }
 
-  /* subtle noise (makes glass feel premium) */
+  /* subtle noise */
   .noise{
     position:fixed; inset:0; pointer-events:none; z-index:-1;
     background-image:
@@ -75,11 +82,15 @@
     position:sticky; top:0; z-index:40;
     padding: 14px var(--padx);
     display:flex; align-items:center; justify-content:space-between; gap:14px;
-    background: rgba(247,249,252,.35);
+
+    /* “glass nav” */
+    background: rgba(247,249,252,.22);
     border-bottom: 1px solid rgba(255,255,255,.30);
-    backdrop-filter: blur(20px) saturate(1.25);
-    -webkit-backdrop-filter: blur(20px) saturate(1.25);
+
+    backdrop-filter: blur(18px) saturate(1.35) contrast(1.03);
+    -webkit-backdrop-filter: blur(18px) saturate(1.35) contrast(1.03);
   }
+
   .brand{
     display:flex; align-items:baseline; gap:10px;
     font-weight:750; letter-spacing:.02em;
@@ -103,18 +114,21 @@
   }
   .nav-links a:hover{ background: rgba(255,255,255,.35); color: var(--ink); transform: translateY(-1px); }
 
-  /* ===== VisionOS CRYSTAL GLASS ===== */
+  /* ===== CRYSTAL / JELLY GLASS ===== */
   .glass{
     position:relative;
     overflow:hidden;
     border-radius: var(--r);
 
+    /* IMPORTANT: explicit base background-color helps consistency */
+    background-color: rgba(255,255,255,.14);
+
     background:
-      radial-gradient(900px 280px at 20% 0%, rgba(255,255,255,.35), transparent 60%),
+      radial-gradient(900px 280px at 20% 0%, rgba(255,255,255,.30), transparent 60%),
       linear-gradient(180deg, var(--glassA), var(--glassB));
 
     border: 1px solid var(--stroke);
-    border-right-color: rgba(255,255,255,.28);
+    border-right-color: rgba(255,255,255,.26);
     border-bottom-color: var(--strokeDark);
 
     box-shadow:
@@ -123,14 +137,15 @@
       inset 0 1px 0 rgba(255,255,255,.75),
       inset 0 -18px 30px rgba(11,19,32,.06);
 
-    backdrop-filter: blur(30px) saturate(1.35);
-    -webkit-backdrop-filter: blur(30px) saturate(1.35);
+    /* tuned blur for “clear jelly” */
+    backdrop-filter: blur(18px) saturate(1.5) contrast(1.05);
+    -webkit-backdrop-filter: blur(18px) saturate(1.5) contrast(1.05);
 
     transform: translateZ(0);
     transition: transform .25s ease, box-shadow .25s ease;
   }
 
-  /* Inner rim (Apple-y) */
+  /* Inner rim */
   .glass::after{
     content:"";
     position:absolute;
@@ -201,7 +216,7 @@
 
   .actions{ display:flex; gap:12px; flex-wrap:wrap; }
 
-  /* ===== Buttons (Vision) ===== */
+  /* ===== Buttons ===== */
   .btn{
     display:inline-flex; align-items:center; justify-content:center;
     padding: 12px 16px;
@@ -210,8 +225,8 @@
     font-weight: 650;
     color: rgba(11,19,32,.85);
 
-    background: rgba(255,255,255,.20);
-    border: 1px solid rgba(255,255,255,.62);
+    background: rgba(255,255,255,.18);
+    border: 1px solid rgba(255,255,255,.60);
     border-bottom-color: rgba(11,19,32,.12);
 
     box-shadow:
@@ -219,12 +234,12 @@
       inset 0 1px 0 rgba(255,255,255,.75),
       inset 0 -12px 22px rgba(11,19,32,.06);
 
-    backdrop-filter: blur(22px) saturate(1.35);
-    -webkit-backdrop-filter: blur(22px) saturate(1.35);
+    backdrop-filter: blur(16px) saturate(1.35) contrast(1.03);
+    -webkit-backdrop-filter: blur(16px) saturate(1.35) contrast(1.03);
 
     transition: transform .18s ease, background .18s ease;
   }
-  .btn:hover{ transform: translateY(-2px); background: rgba(255,255,255,.26); }
+  .btn:hover{ transform: translateY(-2px); background: rgba(255,255,255,.24); }
 
   .btn-primary{
     background: rgba(11,19,32,.92);
@@ -276,7 +291,7 @@
     border-bottom: 1px solid rgba(11,19,32,.06);
     background:
       radial-gradient(900px 320px at 30% 0%, rgba(255,255,255,.85), transparent 60%),
-      linear-gradient(180deg, rgba(255,255,255,.24), rgba(255,255,255,0));
+      linear-gradient(180deg, rgba(255,255,255,.20), rgba(255,255,255,0));
     position: relative;
     overflow:hidden;
   }
@@ -287,7 +302,7 @@
     background:
       radial-gradient(220px 140px at 22% 30%, rgba(255,255,255,.55), transparent 70%),
       radial-gradient(240px 160px at 74% 40%, rgba(185,220,255,.28), transparent 74%);
-    filter: blur(18px);
+    filter: blur(16px);
     opacity:.55;
     pointer-events:none;
   }
@@ -298,8 +313,8 @@
     padding: 6px 10px;
     border-radius: 999px;
 
-    background: rgba(255,255,255,.16);
-    border: 1px solid rgba(255,255,255,.62);
+    background: rgba(255,255,255,.14);
+    border: 1px solid rgba(255,255,255,.60);
     border-bottom-color: rgba(11,19,32,.12);
     color: rgba(11,19,32,.70);
 
@@ -308,8 +323,8 @@
       inset 0 1px 0 rgba(255,255,255,.75),
       inset 0 -10px 18px rgba(11,19,32,.06);
 
-    backdrop-filter: blur(18px) saturate(1.25);
-    -webkit-backdrop-filter: blur(18px) saturate(1.25);
+    backdrop-filter: blur(14px) saturate(1.25) contrast(1.03);
+    -webkit-backdrop-filter: blur(14px) saturate(1.25) contrast(1.03);
   }
 
   footer{
@@ -326,6 +341,19 @@
 
   @media (prefers-reduced-motion: reduce){
     .glass, .glass::before, .btn{ transition:none !important; }
+  }
+
+  /* ===== Fallback if backdrop-filter not supported ===== */
+  @supports not ((backdrop-filter: blur(1px)) or (-webkit-backdrop-filter: blur(1px))) {
+    .glass, nav, .btn, .tag {
+      backdrop-filter: none !important;
+      -webkit-backdrop-filter: none !important;
+      background: rgba(255,255,255,.72) !important;
+      border-color: rgba(11,19,32,.08) !important;
+      box-shadow:
+        0 22px 70px rgba(10,18,35,.12),
+        inset 0 1px 0 rgba(255,255,255,.75) !important;
+    }
   }
 </style>
 </head>
